--- a/src/atoms/Button/Button.css
+++ b/src/atoms/Button/Button.css
@@ -4,10 +4,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1rem 1.5rem;
+  padding: .8rem 1.2rem;
   border: none;
   background-color: #002855;
-  font-size: 1rem;
+  font-size: .9rem;
+  letter-spacing: 1px;
   color: #fff;
   transition: all .2s; }
   .libui-Button:hover {
