--- a/src/atoms/Button/Button.scss
+++ b/src/atoms/Button/Button.scss
@@ -5,11 +5,12 @@
   align-items: center;
   justify-content: center;
 
-  padding: 1rem 1.5rem;
+  padding: .8rem 1.2rem;
   border: none;
   background-color: $primary;
 
-  font-size: 1rem;
+  font-size: .9rem;
+  letter-spacing: 1px;
   color: #fff;
 
   transition: all .2s;
