--- a/src/atoms/Button/Button.css
+++ b/src/atoms/Button/Button.css
@@ -7,17 +7,32 @@
   padding: .7rem 1.2rem;
   border: none;
   background-color: #002855;
+  color: #fff;
   font-size: .95rem;
   letter-spacing: 1px;
-  color: #fff;
   transition: all .2s; }
   .libui-Button:hover {
     background-color: #335379;
     cursor: pointer; }
     .libui-Button:hover .arrow {
       transform: translateX(2px); }
-  .libui-Button .arrow {
+  .libui-Button.primary {
+    background-color: #002855;
+    color: #fff; }
+    .libui-Button.primary:hover {
+      background-color: #335379; }
+  .libui-Button.secondary {
+    background-color: #DAAA00;
+    color: #fff; }
+    .libui-Button.secondary:hover {
+      background-color: #E1BB33; }
+  .libui-Button.arrow .arrow {
     display: block;
     margin-left: .5rem;
     color: #DAAA00;
     transition: all .2s; }
+  .libui-Button.ghost {
+    background-color: rgba(0, 0, 0, 0);
+    color: rgba(0, 0, 0, 0.7); }
+    .libui-Button.ghost:hover {
+      background-color: rgba(0, 0, 0, 0.1); }
