--- a/src/atoms/Button/Button.css
+++ b/src/atoms/Button/Button.css
@@ -10,7 +10,13 @@
   color: #fff;
   font-size: .95rem;
   letter-spacing: 1px;
-  transition: all .2s; }
+  transition: all .2s;
+  /**
+   * 'type' prop
+   */
+  /**
+   * 'size' prop
+   */ }
   .libui-Button:hover {
     background-color: #335379;
     cursor: pointer; }
@@ -36,3 +42,6 @@
     color: rgba(0, 0, 0, 0.7); }
     .libui-Button.ghost:hover {
       background-color: rgba(0, 0, 0, 0.1); }
+  .libui-Button.sm {
+    padding: .5rem 1rem;
+    font-size: .8rem; }
