--- a/src/atoms/Button/Button.scss
+++ b/src/atoms/Button/Button.scss
@@ -1,6 +1,6 @@
 @import '../../theme/variables/_colors.scss';
 
-.libui-Button {
+.Atom-Button {
   display: flex;
   align-items: center;
   justify-content: center;
