--- a/src/atoms/Input/Input.css
+++ b/src/atoms/Input/Input.css
@@ -1,6 +1,6 @@
 /* Material Design box shadow */
 /* Input inset box-shadow */
-.Input {
+.Atom-Input {
   padding: .7rem 1.2rem;
   border: none;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12), inset 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -8,6 +8,6 @@
   /**
    * 'size' prop
    */ }
-  .Input.sm {
+  .Atom-Input.sm {
     padding: .5rem 1rem;
     font-size: .8rem; }
