--- a/src/atoms/Input/Input.scss
+++ b/src/atoms/Input/Input.scss
@@ -1,6 +1,6 @@
 @import '../../theme/variables/_shadows.scss';
 
-.Input {
+.Atom-Input {
   padding: .7rem 1.2rem;
   border: none;
   box-shadow: $box-shadow-inset;
