--- a/src/theme/modules/_typography.scss
+++ b/src/theme/modules/_typography.scss
@@ -1,5 +1,7 @@
+@import '../variables/_typography';
+
 * {
-  font-family: 'Open Sans', system, sans-serif;
+  font-family: $font-default;
 }
 
 h1,
@@ -8,7 +10,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Montserrat', system, sans-serif;
+  font-family: $font-display;
 }
 
 p {
