--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -1,5 +1,5 @@
 * {
-  font-family: 'Open Sans', system, sans-serif; }
+  font-family: "Open Sans", system, sans-serif; }
 
 h1,
 h2,
@@ -7,7 +7,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Montserrat', system, sans-serif; }
+  font-family: "Montserrat", system, sans-serif; }
 
 p {
   font-size: 1rem;
