--- a/src/atoms/Button/Button.css
+++ b/src/atoms/Button/Button.css
@@ -1,9 +1,6 @@
 /* UC Davis Visual Identity Colors */
 /* lib-ui Theme */
 .Atom-Button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   padding: .7rem 1.2rem;
   border: none;
   background-color: #002855;
@@ -17,6 +14,10 @@
   /**
    * 'size' prop
    */ }
+  .Atom-Button .children-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center; }
   .Atom-Button:hover {
     background-color: #335379;
     cursor: pointer; }
