--- a/src/molecules/Input/Input.css
+++ b/src/molecules/Input/Input.css
@@ -1,9 +1,31 @@
-.Molecule-Input label {
-  display: block;
-  margin-bottom: .3rem;
-  font-family: "Montserrat", system, sans-serif;
-  font-size: .95rem; }
-
-.Molecule-Input.sm label {
-  margin-bottom: .2rem;
-  font-size: .8rem; }
+/* UC Davis Visual Identity Colors */
+/* Material Design colors */
+/* lib-ui Theme */
+.Molecule-Input {
+  /**
+   * 'size' prop
+   */ }
+  .Molecule-Input label {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: .3rem;
+    font-size: .95rem; }
+    .Molecule-Input label .asterisk {
+      display: inline-block;
+      margin-left: .2rem;
+      color: #F44336; }
+  .Molecule-Input .assistive-text {
+    margin-top: .3rem;
+    font-size: .8rem;
+    color: rgba(0, 0, 0, 0.6); }
+    .Molecule-Input .assistive-text .asterisk {
+      display: inline-block;
+      margin-right: .2rem;
+      color: #F44336; }
+  .Molecule-Input.sm label {
+    margin-bottom: .2rem;
+    font-size: .8rem; }
+  .Molecule-Input.sm .assistive-text {
+    margin-top: .2rem;
+    font-size: .7rem; }
