--- a/src/molecules/Input/Input.scss
+++ b/src/molecules/Input/Input.scss
@@ -2,16 +2,18 @@
 @import '../../theme/variables/_colors.scss';
 
 .Molecule-Input {
-  label {
+  label  {
     display: flex;
     flex-direction: row;
     align-items: center;
 
     margin-bottom: .3rem;
 
-    // font-family: $font-display;
-    font-size: .95rem;
-    // font-weight: 700;
+    .label-text {
+      font-family: $font-display;
+      font-size: .95rem;
+      // font-weight: 700;
+    }
 
     .asterisk {
       display: inline-block;
