--- a/src/molecules/Input/Input.css
+++ b/src/molecules/Input/Input.css
@@ -11,7 +11,7 @@
     align-items: center;
     margin-bottom: .3rem; }
     .Molecule-Input label .label-text {
-      font-family: "Montserrat", system, sans-serif;
+      font-family: "Cereal", serif, system, sans-serif;
       font-size: .95rem; }
     .Molecule-Input label .asterisk {
       display: inline-block;
