--- a/src/theme/variables/_typography.scss
+++ b/src/theme/variables/_typography.scss
@@ -1,2 +1,2 @@
-$font-display: 'Montserrat', system, sans-serif;
-$font-default: 'Open Sans', system, sans-serif;
+$font-display: 'Cereal', serif, system, sans-serif;
+$font-default: 'Cereal', serif, system, sans-serif;
