--- a/src/atoms/Input/Input.css
+++ b/src/atoms/Input/Input.css
@@ -4,6 +4,7 @@
 /* Material Design colors */
 /* lib-ui Theme */
 .Atom-Input {
+  box-sizing: border-box;
   padding: .7rem;
   background-color: #f7f7f7;
   border: none;
