--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -2,11 +2,59 @@
 input, textarea {
   outline: none; }
 
+@font-face {
+  font-family: 'Cereal';
+  font-style: normal;
+  font-weight: 300;
+  src: url("fonts/cereal/AirbnbCereal_W_Lt.eot");
+  /* IE9 Compat Modes */
+  src: url("fonts/cereal/AirbnbCereal_W_Lt.woff2") format("woff2"), url("fonts/cereal/AirbnbCereal_W_Lt.woff") format("woff"), url("fonts/cereal/AirbnbCereal_W_Lt.ttf") format("truetype"); }
+
+@font-face {
+  font-family: 'Cereal';
+  font-style: normal;
+  font-weight: 400;
+  src: url("fonts/cereal/AirbnbCereal_W_Bk.eot");
+  /* IE9 Compat Modes */
+  src: url("fonts/cereal/AirbnbCereal_W_Bk.woff2") format("woff2"), url("fonts/cereal/AirbnbCereal_W_Bk.woff") format("woff"), url("fonts/cereal/AirbnbCereal_W_Bk.ttf") format("truetype"); }
+
+@font-face {
+  font-family: 'Cereal';
+  font-style: normal;
+  font-weight: 500;
+  src: url("fonts/cereal/AirbnbCereal_W_Md.eot");
+  /* IE9 Compat Modes */
+  src: url("fonts/cereal/AirbnbCereal_W_Md.woff2") format("woff2"), url("fonts/cereal/AirbnbCereal_W_Md.woff") format("woff"), url("fonts/cereal/AirbnbCereal_W_Md.ttf") format("truetype"); }
+
+@font-face {
+  font-family: 'Cereal';
+  font-style: normal;
+  font-weight: 700;
+  src: url("fonts/cereal/AirbnbCereal_W_Bd.eot");
+  /* IE9 Compat Modes */
+  src: url("fonts/cereal/AirbnbCereal_W_Bd.woff2") format("woff2"), url("fonts/cereal/AirbnbCereal_W_Bd.woff") format("woff"), url("fonts/cereal/AirbnbCereal_W_Bd.ttf") format("truetype"); }
+
+@font-face {
+  font-family: 'Cereal';
+  font-style: normal;
+  font-weight: 800;
+  src: url("fonts/cereal/AirbnbCereal_W_XBd.eot");
+  /* IE9 Compat Modes */
+  src: url("fonts/cereal/AirbnbCereal_W_XBd.woff2") format("woff2"), url("fonts/cereal/AirbnbCereal_W_XBd.woff") format("woff"), url("fonts/cereal/AirbnbCereal_W_XBd.ttf") format("truetype"); }
+
+@font-face {
+  font-family: 'Cereal';
+  font-style: normal;
+  font-weight: 900;
+  src: url("fonts/cereal/AirbnbCereal_W_Blk.eot");
+  /* IE9 Compat Modes */
+  src: url("fonts/cereal/AirbnbCereal_W_Blk.woff2") format("woff2"), url("fonts/cereal/AirbnbCereal_W_Blk.woff") format("woff"), url("fonts/cereal/AirbnbCereal_W_Blk.ttf") format("truetype"); }
+
 /* UC Davis Visual Identity Colors */
 /* Material Design colors */
 /* lib-ui Theme */
 * {
-  font-family: "Open Sans", system, sans-serif; }
+  font-family: "Cereal", serif, system, sans-serif; }
 
 h1,
 h2,
@@ -14,7 +62,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Montserrat", system, sans-serif; }
+  font-family: "Cereal", serif, system, sans-serif; }
 
 p {
   font-size: 1rem;
