center button content

--- a/src/atoms/Button/Button.scss
+++ b/src/atoms/Button/Button.scss
@@ -15,6 +15,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    .children {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 
   &:hover {
