--- a/src/atoms/Button/Button.css
+++ b/src/atoms/Button/Button.css
@@ -19,6 +19,10 @@
     display: flex;
     align-items: center;
     justify-content: center; }
+    .Atom-Button .children-wrapper .children {
+      display: flex;
+      align-items: center;
+      justify-content: center; }
   .Atom-Button:hover {
     background-color: #335379;
     cursor: pointer; }
