Select component, +disable dialog while I figure why it crashes when trying to use it in another app

--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -1,5 +1,8 @@
 /* Disable blue glow on inputs */
-input, textarea, button {
+input,
+textarea,
+button,
+select {
   outline: none; }
 
 @font-face {
