refactor Button api to work according to limited spec

--- a/src/atoms/Button/Button.css
+++ b/src/atoms/Button/Button.css
@@ -2,6 +2,7 @@
 /* Material Design colors */
 /* lib-ui Theme */
 .Atom-Button {
+  position: relative;
   padding: .7rem 1.2rem;
   border: none;
   background-color: #002855;
@@ -14,11 +15,15 @@
    */
   /**
    * 'size' prop
+   */
+  /**
+   * Animation
    */ }
   .Atom-Button .children-wrapper {
     display: flex;
     align-items: center;
-    justify-content: center; }
+    justify-content: center;
+    position: relative; }
     .Atom-Button .children-wrapper .children {
       display: flex;
       align-items: center;
@@ -51,3 +56,25 @@
   .Atom-Button.sm {
     padding: .5rem 1rem;
     font-size: .8rem; }
+  .Atom-Button .fade-enter {
+    opacity: 0; }
+  .Atom-Button .fade-enter-active {
+    opacity: 1;
+    transition: all 200ms linear; }
+  .Atom-Button .fade-exit {
+    opacity: 1; }
+  .Atom-Button .fade-exit-active {
+    opacity: 0;
+    transition: all 200ms linear; }
+  .Atom-Button .fade-exit-done {
+    opacity: 0; }
+  .Atom-Button .spinner {
+    position: relative;
+    height: 100%;
+    width: 100%; }
+    .Atom-Button .spinner > span {
+      position: absolute !important; }
+  .Atom-Button.md .spinner > span {
+    top: -19px; }
+  .Atom-Button.sm .spinner > span {
+    top: -17px; }
