--- a/src/atoms/Button/Button.scss
+++ b/src/atoms/Button/Button.scss
@@ -11,7 +11,7 @@
   font-size: .95rem;
   letter-spacing: 1px;
 
-  transition: all .2s;
+  transition: all .2s linear;
 
   .children-wrapper {
     display: flex;
@@ -33,7 +33,13 @@
     cursor: pointer;
 
     .arrow {
-      transform: translateX(2px);
+      transform: translateX( 2px );
+    }
+  }
+  &:disabled {
+    filter: contrast( .25 ) brightness( 1.5 );
+    &:hover {
+      cursor: not-allowed;
     }
   }
 
