--- a/src/atoms/Button/Button.css
+++ b/src/atoms/Button/Button.css
@@ -12,7 +12,7 @@
   letter-spacing: 1px;
   transition: all .2s linear;
   /**
-   * 'type' prop
+   * 'variant' prop
    */
   /**
    * 'size' prop
@@ -58,6 +58,11 @@
     color: rgba(0, 0, 0, 0.7); }
     .Atom-Button.ghost:hover {
       background-color: rgba(0, 0, 0, 0.1); }
+  .Atom-Button.destructive {
+    background-color: #e53935;
+    color: white; }
+    .Atom-Button.destructive:hover {
+      background-color: #ef5350; }
   .Atom-Button.sm {
     padding: .5rem 1rem;
     font-size: .8rem; }
