--- a/src/molecules/Select/Select.scss
+++ b/src/molecules/Select/Select.scss
@@ -37,6 +37,15 @@
     }
   }
 
+  &.disabled {
+    label .asterisk {
+      display: none;
+    }
+    .assistive-text {
+      display: none;
+    }
+  }
+
   /**
    * 'size' prop
    */
