--- a/src/atoms/Select/Select.scss
+++ b/src/atoms/Select/Select.scss
@@ -33,6 +33,9 @@
     &:required:invalid {
       border-bottom-color: $red;
     }
+    &:disabled {
+      border-bottom-color: rgba( 0, 0, 0, .6 );
+    }
   }
 
   &.disabled:after {
