revert font pathing

--- a/src/theme/fonts/cereal/_cereal.scss
+++ b/src/theme/fonts/cereal/_cereal.scss
@@ -2,58 +2,58 @@
   font-family: 'Cereal';
   font-style: normal;
   font-weight: 300;
-  src: url('./AirbnbCereal_W_Lt.eot'); /* IE9 Compat Modes */
-  src: url('./AirbnbCereal_W_Lt.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./AirbnbCereal_W_Lt.woff') format('woff'), /* Modern Browsers */
-       url('./AirbnbCereal_W_Lt.ttf') format('truetype'), /* Safari, Android, iOS */
+  src: url('fonts/cereal/AirbnbCereal_W_Lt.eot'); /* IE9 Compat Modes */
+  src: url('fonts/cereal/AirbnbCereal_W_Lt.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/cereal/AirbnbCereal_W_Lt.woff') format('woff'), /* Modern Browsers */
+       url('fonts/cereal/AirbnbCereal_W_Lt.ttf') format('truetype'), /* Safari, Android, iOS */
 }
 
 @font-face {
   font-family: 'Cereal';
   font-style: normal;
   font-weight: 400;
-  src: url('./AirbnbCereal_W_Bk.eot'); /* IE9 Compat Modes */
-  src: url('./AirbnbCereal_W_Bk.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./AirbnbCereal_W_Bk.woff') format('woff'), /* Modern Browsers */
-       url('./AirbnbCereal_W_Bk.ttf') format('truetype'), /* Safari, Android, iOS */
+  src: url('fonts/cereal/AirbnbCereal_W_Bk.eot'); /* IE9 Compat Modes */
+  src: url('fonts/cereal/AirbnbCereal_W_Bk.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/cereal/AirbnbCereal_W_Bk.woff') format('woff'), /* Modern Browsers */
+       url('fonts/cereal/AirbnbCereal_W_Bk.ttf') format('truetype'), /* Safari, Android, iOS */
 }
 
 @font-face {
   font-family: 'Cereal';
   font-style: normal;
   font-weight: 500;
-  src: url('./AirbnbCereal_W_Md.eot'); /* IE9 Compat Modes */
-  src: url('./AirbnbCereal_W_Md.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./AirbnbCereal_W_Md.woff') format('woff'), /* Modern Browsers */
-       url('./AirbnbCereal_W_Md.ttf') format('truetype'), /* Modern Browsers */
+  src: url('fonts/cereal/AirbnbCereal_W_Md.eot'); /* IE9 Compat Modes */
+  src: url('fonts/cereal/AirbnbCereal_W_Md.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/cereal/AirbnbCereal_W_Md.woff') format('woff'), /* Modern Browsers */
+       url('fonts/cereal/AirbnbCereal_W_Md.ttf') format('truetype'), /* Modern Browsers */
 }
 
 @font-face {
   font-family: 'Cereal';
   font-style: normal;
   font-weight: 700;
-  src: url('./AirbnbCereal_W_Bd.eot'); /* IE9 Compat Modes */
-  src: url('./AirbnbCereal_W_Bd.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./AirbnbCereal_W_Bd.woff') format('woff'), /* Modern Browsers */
-       url('./AirbnbCereal_W_Bd.ttf') format('truetype'), /* Modern Browsers */
+  src: url('fonts/cereal/AirbnbCereal_W_Bd.eot'); /* IE9 Compat Modes */
+  src: url('fonts/cereal/AirbnbCereal_W_Bd.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/cereal/AirbnbCereal_W_Bd.woff') format('woff'), /* Modern Browsers */
+       url('fonts/cereal/AirbnbCereal_W_Bd.ttf') format('truetype'), /* Modern Browsers */
 }
 
 @font-face {
   font-family: 'Cereal';
   font-style: normal;
   font-weight: 800;
-  src: url('./AirbnbCereal_W_XBd.eot'); /* IE9 Compat Modes */
-  src: url('./AirbnbCereal_W_XBd.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./AirbnbCereal_W_XBd.woff') format('woff'), /* Modern Browsers */
-       url('./AirbnbCereal_W_XBd.ttf') format('truetype'), /* Modern Browsers */
+  src: url('fonts/cereal/AirbnbCereal_W_XBd.eot'); /* IE9 Compat Modes */
+  src: url('fonts/cereal/AirbnbCereal_W_XBd.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/cereal/AirbnbCereal_W_XBd.woff') format('woff'), /* Modern Browsers */
+       url('fonts/cereal/AirbnbCereal_W_XBd.ttf') format('truetype'), /* Modern Browsers */
 }
 
 @font-face {
   font-family: 'Cereal';
   font-style: normal;
   font-weight: 900;
-  src: url('./AirbnbCereal_W_Blk.eot'); /* IE9 Compat Modes */
-  src: url('./AirbnbCereal_W_Blk.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./AirbnbCereal_W_Blk.woff') format('woff'), /* Modern Browsers */
-       url('./AirbnbCereal_W_Blk.ttf') format('truetype'), /* Modern Browsers */
+  src: url('fonts/cereal/AirbnbCereal_W_Blk.eot'); /* IE9 Compat Modes */
+  src: url('fonts/cereal/AirbnbCereal_W_Blk.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/cereal/AirbnbCereal_W_Blk.woff') format('woff'), /* Modern Browsers */
+       url('fonts/cereal/AirbnbCereal_W_Blk.ttf') format('truetype'), /* Modern Browsers */
 }
