update styling on Input atom and remove componentWillReceiveProps()

--- a/src/molecules/Input/Input.css
+++ b/src/molecules/Input/Input.css
@@ -33,5 +33,4 @@
     margin-bottom: .2rem;
     font-size: .8rem; }
   .Molecule-Input.sm .assistive-text {
-    margin-top: .2rem;
-    font-size: .7rem; }
+    margin-top: .2rem; }
